distributed storage & test docker file
